# wxmapconv

./: .gitignore  CMakeLists.txt
cmake/: Toolchain-mingw32_new.cmake  package_config.cmake  sources.list
po/: CMakeLists.txt
src/: compile.cpp  frontend.cpp  main.cpp  map.smd  mouse.cpp  openFiles.cpp  previewControls.cpp  projectLoad.cpp  projectNew.cpp  projectSave.cpp  resource.rc  resources.h  smdControlsAtmospheric.cpp  smdControlsGeneral.cpp  smdControlsWater.cpp  smdOpen.cpp  smdSave.cpp  wxwfrontend.cbp  wxwfrontend.cpp  wxwfrontend.h  wxwfrontendcompile.cpp  wxwfrontendopen.cpp
